# mailsort-env

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  email_data.py  environment.py  rewards.py  tasks.py
